// Copyright 2022 Lumberjack authors (see AUTHORS file)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package abcxyz.test;

option go_package = "github.com/abcxyz/lumberjack/clients/go/test/grpc-app/talkerpb;talkerpb";
option java_multiple_files = true;
option java_outer_classname = "TalkerProto";
option java_package = "com.abcxyz.lumberjack.test.talker";

// A gRPC service definition used for lumberjack integration test.
service Talker {
  // Say hello with something OK to audit log in request/response.
  rpc Hello(HelloRequest) returns (HelloResponse);
  // Whisper with something sensitive (shouldn't be audit logged) in
  // request/response.
  rpc Whisper(WhisperRequest) returns (WhisperResponse);
  // Say bye with something OK to audit log in request,
  // but we don't care the response at all.
  rpc Bye(ByeRequest) returns (ByeResponse);

  rpc Fibonacci(FibonacciRequest) returns (stream FibonacciResponse);
  rpc Addition(stream AdditionRequest) returns (AdditionResponse);

  // An api that is intended to always throw an error.
  rpc Fail(FailRequest) returns (FailResponse);

  // API for client streaming that throws an error if 4 is sent
  rpc FailOnFour(stream FailOnFourRequest) returns (FailOnFourResponse);

  // TODO(#81): Add bi-directional streaming API as well.
  // Something like "Conversation".
}

message HelloRequest {
  string target = 1;
  string message = 2;
}

message HelloResponse {
  string message = 1;
}

message WhisperRequest {
  string target = 1;
  string message = 2;
}

message WhisperResponse {
  string message = 1;
}

message ByeRequest {
  string target = 1;
  string message = 2;
}

message ByeResponse {
  string message = 1;
}

message FibonacciRequest {
  uint32 places = 1;
  string target = 2;
}

message FibonacciResponse {
  uint32 position = 1;
  uint32 value = 2;
}

message AdditionRequest {
  uint32 addend = 1;
  string target = 2;
}

message AdditionResponse {
  uint64 sum = 1;
}

message FailRequest {
  string target = 1;
  string message = 2;
}

message FailResponse {
  string message = 1;
}

message FailOnFourRequest {
  string target = 1;
  uint32 value = 2;
}

message FailOnFourResponse {
  string message = 1;
}